--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,13 @@
             <artifactId>annotations</artifactId>
             <version>16.0.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.jfoenix</groupId>
+            <artifactId>jfoenix</artifactId>
+            <version>8.0.4</version>
+        </dependency>
+
     </dependencies>
 
     <build>
