--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,12 @@
             <version>8.0.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.jfree</groupId>
+            <artifactId>jfreechart</artifactId>
+            <version>1.5.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
