--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,11 @@
             <version>3.10</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>28.2-jre</version>
+        </dependency>
 
     </dependencies>
 
@@ -79,7 +84,6 @@
                     <mainClass>com.saska.stabsputnikapp.HeadApp</mainClass>
                 </configuration>
             </plugin>
-
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
